--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -2,13 +2,13 @@
 <resources>
     <string name="app_name">Zero</string>
     <string name="profile">Profile</string>
-    <string name="cd_channel_bottom_bar_divider">Bottom bar divider</string>
     <string name="cd_ic_settings">Settings</string>
     <string name="cd_ic_circle_add">@string/create_a_world</string>
 
     <string name="invite_members">Invite Members</string>
     <string name="my_worlds">My Worlds</string>
     <string name="create_a_world">Create a World</string>
+    <string name="logout">Logout</string>
 
     <string name="write_your_message">Write your Message</string>
     <string name="latest_messages">Latest Messages</string>
