--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="cd_ic_settings">Settings</string>
     <string name="cd_ic_circle_add">@string/create_a_world</string>
 
+    <string name="notification_channel_messages">Messages</string>
+    <string name="notification_channel_messages_description">Get notifications for channel/direct messages</string>
+
     <string name="invite_members">Invite Members</string>
     <string name="my_worlds">My Worlds</string>
     <string name="create_a_world">Create a World</string>
