--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="profile">Profile</string>
     <string name="cd_ic_settings">Settings</string>
     <string name="cd_ic_circle_add">@string/create_a_world</string>
+    <string name="create_direct_message">Create new message</string>
+    <string name="create">Create</string>
 
     <string name="notification_channel_messages">Messages</string>
     <string name="notification_channel_messages_description">Get notifications for channel/direct messages</string>
@@ -16,6 +18,8 @@
     <string name="write_your_message">Write your Message</string>
     <string name="latest_messages">Latest Messages</string>
     <string name="search_channels">Search Channels…</string>
+    <string name="search_users">Search users…</string>
+    <string name="new_chat">New Chat</string>
     <string name="search">Search…</string>
     <string name="cancel">Cancel</string>
 
